<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:background="@color/lightPink">

        <TextView
            android:id="@+id/check_bmi"
            android:layout_width="294dp"
            android:layout_height="71dp"
            android:layout_marginTop="100dp"
            android:backgroundTint="#D31717"
            android:text="@string/check_bmi"
            android:textAllCaps="false"
            android:textColor="#1E6091"
            android:textSize="28sp"
            app:layout_constraintBottom_toTopOf="@+id/weight_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/weight_input"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/weight_input"
            android:layout_width="156dp"
            android:layout_height="56dp"
            android:ems="10"
            android:hint="@string/height_enter"
            android:inputType="number"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.928"
            app:layout_constraintStart_toStartOf="@+id/height_input"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.311"
            tools:ignore="TextContrastCheck" />

        <EditText
            android:id="@+id/height_input"
            android:layout_width="156dp"
            android:layout_height="56dp"
            android:ems="10"
            android:hint="@string/weight_enter"
            android:inputType="number"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.121"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.311"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/button_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/button_color"
            android:text="@string/button_check"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/height_input"
            app:layout_constraintVertical_bias="0.576"
            app:strokeColor="#D53E3E" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="341dp"
            android:layout_height="509dp"
            android:contentDescription="TODO"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.565"
            app:srcCompat="@drawable/bmi_image" />

        <TextView
            android:id="@+id/inut_enter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/input_enter"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/check_bmi"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/check_bmi"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>